# geektime-ai-bootcamp

./: .gitignore  .gitmodules  README.md  check_db.py  interview_db_README.md  interview_db_quick_reference.md  start_backend_simple.py  temp_start.py  tmpclaude-a2b4-cwd
w2/sth-db-query/backend/: .env.example  Dockerfile  README.md  init_db.py  init_db.sql  pyproject.toml
w2/sth-db-query/backend/app/: __init__.py  main.py
w2/sth-db-query/backend/app/adapters/: __init__.py  mysql_adapter.py  postgres_adapter.py
w2/sth-db-query/backend/app/core/: adapter_factory.py  config.py  connection_pool.py  database.py  db_adapter.py  db_type_detector.py  errors.py  init_db.py  performance.py  (+1 more)
w2/sth-db-query/backend/docs/: MySQL_创建指南.md  code-review-report.json
w2/sth-db-query/backend/scripts/: init_db.bat  setup_mysql.bat  setup_mysql.ps1  start_backend.bat
w2/sth-db-query/backend/tests/: conftest.py  test_api.py  test_api_endpoint_properties.py  test_api_response_format_properties.py  test_connection_validation_properties.py  test_cors_properties.py  test_data_model_serialization.py  test_database_connection_properties.py  test_database_initialization.py  test_edit_api.py  test_error_message_quality_properties.py  test_frontend_edit.py  test_interview_db.py  test_metadata_error_handling_properties.py  test_metadata_persistence_properties.py  test_patch_api.py  test_query_endpoint_properties.py  test_query_execution_properties.py  test_response_utils.py  test_security.py  test_sql_validation_properties.py  test_startup_data_loading_properties.py  update_test_db.json
(+282 files in other folders)
